--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ coverage==7.3.2
 dnspython==2.4.2
 email-validator==2.0.0.post2
 fastapi==0.103.1
+gunicorn==21.2.0
 h11==0.14.0
 httpcore==0.18.0
 httptools==0.6.0
@@ -22,6 +23,7 @@ pydantic==2.3.0
 pydantic-extra-types==2.1.0
 pydantic-settings==2.0.3
 pydantic_core==2.6.3
+PyJWT==2.8.0
 pytest==7.4.2
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
