--- a/app.yaml
+++ b/app.yaml
@@ -1,14 +1,21 @@
 runtime: python311
 
-service: rocaleda-fp-ms-template
+service: rocaleda-fp-ms-authentication
 
 entrypoint: gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app
 
 instance_class: F2
 
+readiness_check:
+    path: "/health"  
+    check_interval_sec: 300
+    timeout_sec: 300  
+    failure_threshold: 5
+
 env_variables:
-    SERVICENAME1_MS: VAR_SERVICENAME1_MS
-    OTHERVARIABLE1: VAR_OTHERVARIABLE1
+    USERS_MS: VAR_USERS_MS
+    SECRET_KEY: VAR_SECRET_KEY
+    ALGORITHM: VAR_ALGORITHM
 
 vpc_access_connector:
     name: projects/VAR_PROJECT_ID/locations/VAR_REGION/connectors/VAR_VPC_CONNECTOR
